@@ -1,3 +1,6 @@
+[B]1.3.0[/B]
+- Added: return the aspect attribute for thumb fields as banner or poster
+
 [B]1.2.4[/B]
 - Added: support for imdb url nfo's
 
